Bug 1560061 - Make DOMLocalization support ShadowDOM as roots. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D35584